--- a/css-variables.html
+++ b/css-variables.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <h1>CSS Variables</h1>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+      quod quia eos nobis similique, numquam temporibus provident, sit, nam fuga
+      consequatur placeat. Debitis laborum autem beatae ullam modi nesciunt
+      sequi.
+    </p>
+
+    <div>First div</div>
+    <div>Second div</div>
+
+    <button>Try</button>
   </body>
 </html>
