--- a/css-variables.html
+++ b/css-variables.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/variables.css" />
     <title>CSS-Variables</title>
@@ -10,14 +11,14 @@
     <h1>CSS Variables</h1>
 
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
-      quod quia eos nobis similique, numquam temporibus provident, sit, nam fuga
-      consequatur placeat. Debitis laborum autem beatae ullam modi nesciunt
-      sequi.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est consequuntur
+      ullam dicta perspiciatis! Veritatis omnis suscipit expedita quasi?
+      Doloremque dignissimos ipsum optio et sed. Vel aliquid dolor illum nobis
+      eum?
     </p>
 
-    <div>First div</div>
-    <div>Second div</div>
+    <div class="light">First div</div>
+    <div class="dark">Second div</div>
 
     <button>Try</button>
   </body>
